<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about_app_authors_k9">The K-9 Dog Walkers</string>
    <string name="about_app_authors_thunderbird">Thunderbird Mobile Team</string>
    <string name="source_code">Source code</string>
    <string name="app_license">Apache License, Version 2.0</string>
    <string name="about_project_title">Open Source Project</string>
    <string name="about_website_title">Website</string>
    <string name="get_help_title">Get help</string>
    <string name="user_forum_title">User forum</string>
    <string name="about_libraries">Libraries</string>
    <string name="license">License</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_loading_error">Couldn\'t load the changelog.</string>
    <string name="changelog_version_title">Version %s</string>
    <string name="changelog_recent_changes_title">What\'s new</string>
    <string name="changelog_show_recent_changes">Show recent changes when app was updated</string>
    <string name="changelog_snackbar_text">Find out what\'s new in this release</string>
    <string name="changelog_snackbar_button_text">View</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%1$s</xliff:g>\" will be removed from <xliff:g id="app_name">%2$s</xliff:g>.</string>
    <string name="authors">Authors</string>
    <string name="about_title">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
    <string name="compose_title_forward">Forward</string>
    <string name="compose_title_forward_as_attachment">Forward as attachment</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="choose_folder_move_title">Move to…</string>
    <string name="choose_folder_copy_title">Copy to…</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="send_action">Send</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="forward_as_attachment_action">Forward as attachment</string>
    <string name="edit_as_new_message_action">Edit as new message</string>
    <string name="move_action">Move</string>
    <string name="move_to_drafts_action">Move to Drafts</string>
    <string name="refile_action">Refile…</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_everywhere_action">Search everywhere</string>
    <string name="search_results">Search results</string>
    <string name="new_messages_title">New messages</string>
    <string name="folders_action">Manage folders</string>
    <string name="account_settings_action">Account settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="unsubscribe_action">Unsubscribe</string>
    <string name="show_headers_action">Show headers</string>
    <plurals name="copy_address_to_clipboard">
        <item quantity="one">Address copied to clipboard</item>
        <item quantity="other">Addresses copied to clipboard</item>
    </plurals>
    <string name="copy_subject_to_clipboard">Subject text copied to clipboard</string>
    <string name="message_view_theme_action_dark">Switch to dark theme</string>
    <string name="message_view_theme_action_light">Switch to light theme</string>
    <string name="mark_as_unread_action">Mark unread</string>
    <string name="read_receipt">Read receipt</string>
    <string name="read_receipt_enabled">Will request read receipt</string>
    <string name="read_receipt_disabled">Will not request read receipt</string>
    <string name="add_attachment_action">Add attachment</string>
    <string name="empty_spam_action">Empty Spam</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="about_action">About</string>
    <string name="prefs_title">Settings</string>
    <string name="general_no_subject">(No subject)</string>
    <string name="general_no_sender">No sender</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_invalid_id_error">Message not found</string>
    <string name="status_loading_error">Message loading error</string>
    <string name="load_more_messages_fmt">Load up
    to <xliff:g id="messages_to_load">%d</xliff:g> more</string>
    <string name="size_format_gigabytes">%.1f GB</string>
    <string name="size_format_megabytes">%.1f MB</string>
    <string name="size_format_kilobytes">%.1f kB</string>
    <string name="size_format_bytes">%d B</string>
    <plurals name="notification_new_messages_title">
        <item quantity="one"><xliff:g id="new_message_count">%d</xliff:g> new message</item>
        <item quantity="other"><xliff:g id="new_message_count">%d</xliff:g> new messages</item>
    </plurals>
    <string name="notification_additional_messages">+ <xliff:g id="additional_messages">%1$d</xliff:g> more on <xliff:g id="account">%2$s</xliff:g></string>
    <string name="notification_action_reply">Reply</string>
    <string name="notification_action_mark_as_read">Mark Read</string>
    <string name="notification_action_mark_all_as_read">Mark All Read</string>
    <string name="notification_action_delete">Delete</string>
    <string name="notification_action_delete_all">Delete All</string>
    <string name="notification_action_archive">Archive</string>
    <string name="notification_action_archive_all">Archive All</string>
    <string name="notification_action_spam">Spam</string>
    <string name="notification_certificate_error_public">Certificate error</string>
    <string name="notification_certificate_error_title">Certificate error for <xliff:g id="account">%s</xliff:g></string>
    <string name="notification_certificate_error_text">Check your server settings</string>
    <string name="notification_authentication_error_title">Authentication failed</string>
    <string name="notification_authentication_error_text">Authentication failed for <xliff:g id="account">%s</xliff:g>. Update your server settings.</string>
    <string name="notification_notify_error_title">Notification error</string>
    <string name="notification_notify_error_text">An error has occurred while trying to create a system notification for a new message. The reason is most likely a missing notification sound.\n\nTap to open notification settings.</string>
    <string name="notification_bg_sync_ticker">Checking mail: <xliff:g id="account">%1$s</xliff:g>:<xliff:g id="folder">%2$s</xliff:g></string>
    <string name="notification_bg_sync_title">Checking mail</string>
    <string name="notification_bg_send_ticker">Sending mail: <xliff:g id="account">%s</xliff:g></string>
    <string name="notification_bg_send_title">Sending mail</string>
    <string name="notification_bg_title_separator">:</string>
    <string name="notification_channel_push_title">Synchronize (Push)</string>
    <string name="notification_channel_push_description">Displayed while waiting for new messages</string>
    <string name="notification_channel_messages_title">Messages</string>
    <string name="notification_channel_messages_description">Notifications related to messages</string>
    <string name="notification_channel_miscellaneous_title">Miscellaneous</string>
    <string name="notification_channel_miscellaneous_description">Miscellaneous notifications like errors etc.</string>
    <string name="send_failure_subject">Failed to send some messages</string>
    <string name="version">Version</string>
    <string name="debug_enable_debug_logging_title">Enable debug logging</string>
    <string name="debug_enable_debug_logging_summary">Log extra diagnostic information</string>
    <string name="debug_enable_sensitive_logging_title">Log sensitive information</string>
    <string name="debug_enable_sensitive_logging_summary">May show passwords in logs.</string>
    <string name="debug_export_logs_title">Export logs</string>
    <string name="debug_export_logs_success">Export successful. Logs might contain sensitive information. Be careful who you send them to.</string>
    <string name="debug_export_logs_failure">Export failed.</string>
    <string name="message_list_load_more_messages_action">Load more messages</string>
    <string name="message_to_fmt">To:<xliff:g id="counterParty">%s</xliff:g></string>
    <string name="message_compose_subject_hint">Subject</string>
    <string name="message_compose_content_hint">Message text</string>
    <string name="message_compose_signature_hint">Signature</string>
    <string name="message_compose_quote_header_separator">-------- Original Message --------</string>
    <string name="message_compose_quote_header_subject">Subject:</string>
    <string name="message_compose_quote_header_send_date">Sent:</string>
    <string name="message_compose_quote_header_from">From:</string>
    <string name="message_compose_quote_header_to">To:</string>
    <string name="message_compose_quote_header_cc">Cc:</string>
    <string name="message_compose_reply_header_fmt"><xliff:g id="sender">%s</xliff:g> wrote:</string>
    <string name="message_compose_reply_header_fmt_with_date">On <xliff:g id="sent_date">%1$s</xliff:g>, <xliff:g id="sender">%2$s</xliff:g> wrote:</string>
    <string name="message_compose_error_no_recipients">You must add at least one recipient.</string>
    <string name="compose_error_incomplete_recipient">Recipient field contains incomplete input!</string>
    <string name="error_contact_address_not_found">No email address could be found for this contact.</string>
    <string name="_pqc_algorithm_unknown">Algorithm: Unknown</string>
    <string name="_pqc_generate_keypair">🛠 Generate key pair</string>
    <string name="_pqc_export">📤 Export</string>
    <string name="_pqc_import">📥 Import</string>
    <string name="_pqc_no_icon">❌</string>
    <string name="_pqc_no_keypair">No key pair available</string>
    <string name="_pqc_public_key_label">Public key:</string>
    <string name="_pqc_no_public_key">No public key</string>
    <string name="pqc_encryption_description_text3">Hybrid encryption is only possible if all recipients support both PGP and PQC.</string>
    <string name="pqc_sig_encryption_label">PQC/PGP Hybrid Encryption and Signing</string>
    <string name="pqc_sig_encryption_description_text1">Encrypting and signing messages with hybrid algorithms ensures forward secrecy against future quantum adversaries.</string>
</resources>