<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="14dp"
    android:paddingBottom="14dp"
    tools:context="com.fsck.k9.activity.compose.PqcSigEncrytpDescriptionDialog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_check_circle"
            android:scaleType="fitCenter"
            app:tint="@color/light_black" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/pqc_sig_encryption_label" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/pqc_sig_encryption_description_text1" />


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/pqc_encryption_description_text3" />
</LinearLayout>
